--- a/public/index.html
+++ b/public/index.html
@@ -821,7 +821,7 @@
     </div>
 
     <script>
-        const socket = io('http://localhost:3001'); // Change this to your server URL
+        const socket = io('http://https://business-monopoly-server.onrender.com'); // Change this to your server URL
         let currentRoom = null;
         let currentPlayer = null;
         let gameData = null;
